overflow fixed

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -44,6 +44,7 @@ $linear-alternate: linear-gradient(to right, rgb(255, 0, 212), rgba(255, 0, 221,
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    overflow-x: hidden;
 
     @media only screen and (max-width: 1100px) {
         font-size: 50%;
@@ -54,6 +55,8 @@ html {
 }
 
 .body {
+    position: relative;
+    overflow-x: hidden;
     font-family: $font-primary;
     color: $color-text;
     background: url(../img/background.png);
@@ -61,7 +64,7 @@ html {
     background-repeat: repeat;
     line-height: 1.6;
     display: grid;
-    overflow-x: hidden;
+    
     grid-template-columns: [left-start] 7vw [left-end content-start] repeat(7, [col-start] 1fr [col-end]) [content-end sidebar-start] 7vw [sidebar-end];
     grid-template-rows: [header-start] 100vh [header-end] auto;
 
@@ -84,4 +87,3 @@ html {
 .hidden {
     display: none;
 }
-
